@@ -145,83 +145,6 @@
                </includes>
             </configuration>
          </plugin>
-         <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>gwt-maven-plugin</artifactId>
-            <configuration>
-               <module>org.eclipse.jdt.IdeJdt</module>
-               <logLevel>ERROR</logLevel>
-               <skipTests>false</skipTests>
-               <forkMode>never</forkMode>
-               <testFailureIgnore>${testFailureIgnore}</testFailureIgnore>
-               <productionMode>false</productionMode>
-               <testTimeOut>500</testTimeOut>
-               <mode>htmlunit</mode>
-               <htmlunit>FF3</htmlunit>
-               <extraJvmArgs>-Xmx1048m -XX:MaxPermSize=256m -Xss35m</extraJvmArgs>
-               <mergedWebXml>${project.build.directory}/www-test/WEB-INF/web.xml</mergedWebXml>
-               <out>${project.build.directory}/www-test</out>
-            </configuration>
-            <executions>
-               <execution>
-                  <goals>
-                     <goal>test</goal>
-                     <goal>mergewebxml</goal>
-                  </goals>
-               </execution>
-            </executions>
-         </plugin>
       </plugins>
    </build>
-   <profiles>
-      <profile>
-         <id>shell</id>
-         <activation>
-            <activeByDefault>false</activeByDefault>
-         </activation>
-         <build>
-            <plugins>
-               <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-resources-plugin</artifactId>
-                  <executions>
-                     <execution>
-                        <id>copy-prod-resources</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                           <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                           <outputDirectory>target/war/</outputDirectory>
-                           <resources>
-                              <resource>
-                                 <directory>src/main/webapp/</directory>
-                                 <filtering>true</filtering>
-                              </resource>
-                           </resources>
-                           <nonFilteredFileExtensions>
-                              <nonFilteredFileExtension>zip</nonFilteredFileExtension>
-                           </nonFilteredFileExtensions>
-                        </configuration>
-                     </execution>
-                  </executions>
-               </plugin>
-               <plugin>
-                  <groupId>org.codehaus.mojo</groupId>
-                  <artifactId>gwt-maven-plugin</artifactId>
-                  <version>${gwt.maven.plugin.version}</version>
-                  <configuration>
-                     <runTarget>org.eclipse.jdt.IdeJdt/JdtTest.html</runTarget>
-                     <logLevel>INFO</logLevel>
-                     <hostedWebapp>${basedir}/target/war</hostedWebapp>
-                     <skipTests>${gwt.test.skip}</skipTests>
-                     <bindAddress>0.0.0.0</bindAddress>
-                     <extraJvmArgs>-Xmx2048m -XX:MaxPermSize=256m</extraJvmArgs>
-                     <compileReport>true</compileReport>
-                  </configuration>
-               </plugin>
-            </plugins>
-         </build>
-      </profile>
-   </profiles>
 </project>
